--- a/index.html
+++ b/index.html
@@ -20,19 +20,21 @@
     <!--HEADER-->
     <header class="page-header shadow">
       <div class="container">
-        <nav class="header">
-          <a href="./index.html" class="logo"
-            >Web<span class="studio">Studio</span></a
-          >
-          <ul class="site-nav list">
-            <li class="item"><a href="./index.html" class="link">Studio</a></li>
-            <li class="item">
-              <a href="./portfolio.html" class="link">Portfolio</a>
-            </li>
-            <li class="item"><a href="" class="link">Contacts</a></li>
-          </ul>
-          <!-- </nav>
-        <nav> -->
+        <div class="header">
+          <nav class="header">
+            <a href="./index.html" class="logo"
+              >Web<span class="studio">Studio</span></a
+            >
+            <ul class="site-nav list">
+              <li class="item">
+                <a href="./index.html" class="link">Studio</a>
+              </li>
+              <li class="item">
+                <a href="./portfolio.html" class="link">Portfolio</a>
+              </li>
+              <li class="item"><a href="" class="link">Contacts</a></li>
+            </ul>
+          </nav>
           <ul class="auth-nav list">
             <li class="item">
               <a href="mailto:info@devstudio.com" class="link"
@@ -45,7 +47,7 @@
               >
             </li>
           </ul>
-        </nav>
+        </div>
       </div>
     </header>
 
@@ -108,6 +110,8 @@
           </ul>
         </div>
       </section>
+
+      <!-- OUT TEAM -->
       <section class="section our-team">
         <div class="container">
           <h2 class="section-title">Our Team</h2>
