--- a/portfolio.html
+++ b/portfolio.html
@@ -19,19 +19,21 @@
   <body>
     <header class="page-header shadow">
       <div class="container">
-        <nav class="header">
-          <a href="./index.html" class="logo"
-            >Web<span class="studio">Studio</span></a
-          >
-          <ul class="site-nav list">
-            <li class="item"><a href="./index.html" class="link">Studio</a></li>
-            <li class="item">
-              <a href="./portfolio.html" class="link">Portfolio</a>
-            </li>
-            <li class="item"><a href="" class="link">Contacts</a></li>
-          </ul>
-          <!-- </nav>
-        <nav> -->
+        <div class="header">
+          <nav class="header">
+            <a href="./index.html" class="logo"
+              >Web<span class="studio">Studio</span></a
+            >
+            <ul class="site-nav list">
+              <li class="item">
+                <a href="./index.html" class="link">Studio</a>
+              </li>
+              <li class="item">
+                <a href="./portfolio.html" class="link">Portfolio</a>
+              </li>
+              <li class="item"><a href="" class="link">Contacts</a></li>
+            </ul>
+          </nav>
           <ul class="auth-nav list">
             <li class="item">
               <a href="mailto:info@devstudio.com" class="link"
@@ -44,15 +46,15 @@
               >
             </li>
           </ul>
-        </nav>
+        </div>
       </div>
     </header>
 
     <!-- MAIN -->
     <main>
-      <!-- Filter buttons -->
-      <div class="container">
-        <section class="section portfolio">
+      <section class="section portfolio">
+        <div class="container">
+          <!-- FILTER -->
           <h2 class="visuallyhidden">Filter</h2>
           <ul class="list filter-btn">
             <li class="btn-filter">
@@ -71,61 +73,75 @@
               <button type="button" class="btn-portfolio">Marketing</button>
             </li>
           </ul>
-        </section>
-      </div>
-      <div class="container">
-        <section class="section portfolio">
           <!-- Results -->
           <h2 class="visuallyhidden">Results</h2>
           <ul class="list results">
             <li class="result">
               <img src="./images/portfolio1.jpg" alt="work_example_1" />
-              <h3>Banking App Interface Concept</h3>
-              <p>App</p>
+              <div class="border">
+                <h3>Banking App Interface Concept</h3>
+                <p>App</p>
+              </div>
             </li>
             <li class="result">
               <img src="./images/portfolio2.jpg" alt="work_example_2" />
-              <h3>Cashless Payment</h3>
-              <p>Marketing</p>
+              <div class="border">
+                <h3>Cashless Payment</h3>
+                <p>Marketing</p>
+              </div>
             </li>
             <li class="result">
               <img src="./images/portfolio3.jpg" alt="work_example_3" />
-              <h3>Meditaion App</h3>
-              <p>App</p>
+              <div class="border">
+                <h3>Meditaion App</h3>
+                <p>App</p>
+              </div>
             </li>
             <li class="result">
               <img src="./images/portfolio4.jpg" alt="work_example_4" />
-              <h3>Taxi Service</h3>
-              <p>Marketing</p>
+              <div class="border">
+                <h3>Taxi Service</h3>
+                <p>Marketing</p>
+              </div>
             </li>
             <li class="result">
               <img src="./images/portfolio5.jpg" alt="work_example_5" />
-              <h3>Screen Illustrations</h3>
-              <p>Design</p>
+              <div class="border">
+                <h3>Screen Illustrations</h3>
+                <p>Design</p>
+              </div>
             </li>
             <li class="result">
               <img src="./images/portfolio6.jpg" alt="work_example_6" />
-              <h3>Online Courses</h3>
-              <p>Marketing</p>
+              <div class="border">
+                <h3>Online Courses</h3>
+                <p>Marketing</p>
+              </div>
             </li>
             <li class="result">
               <img src="./images/portfolio7.jpg" alt="work_example_7" />
-              <h3>Instagram Stories Concept</h3>
-              <p>Design</p>
+              <div class="border">
+                <h3>Instagram Stories Concept</h3>
+                <p>Design</p>
+              </div>
             </li>
             <li class="result">
               <img src="./images/portfolio8.jpg" alt="work_example_8" />
-              <h3>Organic Food</h3>
-              <p>Web Site</p>
+              <div class="border">
+                <h3>Organic Food</h3>
+                <p>Web Site</p>
+              </div>
             </li>
             <li class="result">
               <img src="./images/portfolio9.jpg" alt="work_example_9" />
-              <h3>Fresh Coffee</h3>
-              <p>Web Site</p>
+              <div class="border">
+                <h3>Fresh Coffee</h3>
+                <p>Web Site</p>
+              </div>
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
     <!--Футер-->
     <footer class="footer">
