--- a/portfolio.html
+++ b/portfolio.html
@@ -77,63 +77,99 @@
           <h2 class="visuallyhidden">Results</h2>
           <ul class="list results">
             <li class="result">
-              <img src="./images/portfolio1.jpg" alt="work_example_1" />
+              <img
+                src="./images/portfolio1.jpg"
+                alt="work_example_1"
+                width="360"
+              />
               <div class="border">
                 <h3>Banking App Interface Concept</h3>
                 <p>App</p>
               </div>
             </li>
             <li class="result">
-              <img src="./images/portfolio2.jpg" alt="work_example_2" />
+              <img
+                src="./images/portfolio2.jpg"
+                alt="work_example_2"
+                width="360"
+              />
               <div class="border">
                 <h3>Cashless Payment</h3>
                 <p>Marketing</p>
               </div>
             </li>
             <li class="result">
-              <img src="./images/portfolio3.jpg" alt="work_example_3" />
+              <img
+                src="./images/portfolio3.jpg"
+                alt="work_example_3"
+                width="360"
+              />
               <div class="border">
                 <h3>Meditaion App</h3>
                 <p>App</p>
               </div>
             </li>
             <li class="result">
-              <img src="./images/portfolio4.jpg" alt="work_example_4" />
+              <img
+                src="./images/portfolio4.jpg"
+                alt="work_example_4"
+                width="360"
+              />
               <div class="border">
                 <h3>Taxi Service</h3>
                 <p>Marketing</p>
               </div>
             </li>
             <li class="result">
-              <img src="./images/portfolio5.jpg" alt="work_example_5" />
+              <img
+                src="./images/portfolio5.jpg"
+                alt="work_example_5"
+                width="360"
+              />
               <div class="border">
                 <h3>Screen Illustrations</h3>
                 <p>Design</p>
               </div>
             </li>
             <li class="result">
-              <img src="./images/portfolio6.jpg" alt="work_example_6" />
+              <img
+                src="./images/portfolio6.jpg"
+                alt="work_example_6"
+                width="360"
+              />
               <div class="border">
                 <h3>Online Courses</h3>
                 <p>Marketing</p>
               </div>
             </li>
             <li class="result">
-              <img src="./images/portfolio7.jpg" alt="work_example_7" />
+              <img
+                src="./images/portfolio7.jpg"
+                alt="work_example_7"
+                width="360"
+              />
               <div class="border">
                 <h3>Instagram Stories Concept</h3>
                 <p>Design</p>
               </div>
             </li>
             <li class="result">
-              <img src="./images/portfolio8.jpg" alt="work_example_8" />
+              <img
+                src="./images/portfolio8.jpg"
+                alt="work_example_8"
+                width="360"
+              />
               <div class="border">
                 <h3>Organic Food</h3>
                 <p>Web Site</p>
               </div>
             </li>
             <li class="result">
-              <img src="./images/portfolio9.jpg" alt="work_example_9" />
+              <img
+                src="./images/portfolio9.jpg"
+                alt="work_example_9"
+                width="360"
+              />
               <div class="border">
                 <h3>Fresh Coffee</h3>
                 <p>Web Site</p>
